gccida/g2/process_init_element
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:6991:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:6998:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7000:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7001:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *range_end; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7002:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7003:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7005:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *k; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7006:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fields; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7007:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7019:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7020:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7024:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7025:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7026:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7027:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7028:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7044:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( !constructor_stack_0->replacement_value ) 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7051:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v3 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:7053:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( !constructor_stack_0->replacement_value ) 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/process_init_element/src/obj/c-typeck.o] Error 1
